# babyx

./: .gitignore  CMakeLists.txt  README.md
BabyPrograms/BabyBridge/: babybridgemain.c  bridgeai.c  bridgeai.h  bridgegame.c  bridgegame.h  cardpic.c  cardpic.h  compileme.txt  deck.c  deck.h  rgbautil.c  rgbautil.h  shuffle.c  shuffle.h  verabd12.c
BabyPrograms/BabyBridge/cards/: gencards.xml  gencards2.xml
BabyPrograms/BabyBridge/vs/BabyBridge/: BabyBridge.vcxproj  BabyBridge.vcxproj.filters
BabyPrograms/BabyHelloWorld/: HelloBabyX.c
BabyPrograms/BabyHelloWorld/vs/BabyHelloWorld/: BabyHelloWorld.vcxproj  BabyHelloWorld.vcxproj.filters
BabyPrograms/BabyImageEditor/: BabyXImageEditor.c  anneal.c  anneal.h  colorpicker.c  colorpicker.h  makepalette.c  makepalette.h  paletteeditor.c  walkwayttf.c
BabyPrograms/BabyImageEditor/PaletteChooser/: eig3.c  gif.c  gif.h  main.c  makepalette.c  makepalette.h  options.c  rbtree.c
BabyPrograms/BabyLife/: BabyLIfe.c
BabyPrograms/BabyPerlin/: colorpicker.c  colourschemes.c  colourschemes.h  compileme.txt  paletteadjuster.c  paletteadjuster.h  paletteeditor.c  paletteeditor.h  perlineditor.c  simplexnoise.c
BabyPrograms/BabyPerlin/vs/BabyPerlin/: BabyPerlin.vcxproj  BabyPerlin.vcxproj.filters
BabyPrograms/GraphicsContextTest/: gctestmain.c
BabyPrograms/GraphicsContextTest/vs/GraphicsContextTest/: GraphicsContextTest.vcxproj  (+1 more)
BabyPrograms/WidgetTest/: widgettestmain.c
BabyPrograms/WordCatch/: basket.c  main.c  simplexnoise.c  simplexnoise.h  wordmatcher.c  wordmatcher.h  words_10.c  words_20.c  words_35.c  words_40.c  words_50.c  words_55.c  words_60.c  words_70.c  words_80.c  words_95.c
docs/: BabyAudio.html  BabyBridge.html  BabyColours.html  BabyFontsAndStrings.html  BabyGraphics.html  BabyGraphicsContext.html  BabyGraphicsSupport.html  BabyMenusAndPopups.html  BabyPanels.html  BabyPerlin.html  BabyXConcepts.html  BabyXCoreWidgets.html  BabyXHelloWorld.html  BabyXObject.html  index.html
src/: BBX_Button.c  BBX_Button.h  BBX_Canvas.c  BBX_CheckBox.h  BBX_Clipboard.h  BBX_Color.h  BBX_Colours.c  BBX_DialogPanel.h  BBX_EditBox.c  BBX_EditBox.h  BBX_FilePicker.c  BBX_Font.c  BBX_Font.h  BBX_Label.c  BBX_Label.h  BBX_LineEdit.c  BBX_LineEdit.h  BBX_ListBox.c  BBX_Menubar.h  BBX_Panel.c  BBX_Panel.h  BBX_Popup.c  BBX_Popup2.c  BBX_Popup2.h  BBX_PopupPanel.c  BBX_PopupPanel.h  BBX_RadioBox.c  BBX_RadioBox.h  BBX_ScrollPanel.c  BBX_Scrollbar.h  BBX_Spinner.h  audio.c  bbx.c  bbx_graphicscontext.c  bbx_graphicssupport.c  bbx_graphicssupport.h  compileme.txt  datepicker.c  datepicker.h  main.c  (+4 more)
src/common/: BBX_Button.h  BBX_CheckBox.c  BBX_CheckBox.h  BBX_Color.h  BBX_EditBox.c  BBX_EditBox.h  BBX_LineEdit.c  BBX_LineEdit.h  BBX_Menubar.c  BBX_Menubar.h  BBX_MessageBox.c  BBX_RadioBox.c  BBX_RadioBox.h  BBX_Spinner.c  BBX_Spinner.h  bbx_button.c  bbx_graphicscontext.c  bbx_graphicscontext.h  bbx_graphicssupport.c  bbx_graphicssupport.h  fixedfont.c  lato_regular.c
src/linux/: BBX_Button.c  BBX_Canvas.c  BBX_Canvas.h  BBX_CheckBox.c  BBX_CheckBox.h  BBX_Clipboard.c  BBX_DialogPanel.c  BBX_EditBox.hy  BBX_FilePicker.c  BBX_FilePicker.h  BBX_Font.h  BBX_Label.c  BBX_LineEdit.h  BBX_ListBox.h  BBX_Menubar.c  BBX_Menubar.h  BBX_MessageBox.c  BBX_Panel.c  BBX_Popup.h  BBX_ScrollPanel.c  BBX_Scrollbar.c  BBX_Spinner.c  BabyX.c  BabyX.h  bbx.c  bbx_graphicscontext.c  datepicker.c  datepicker.h  tabpanel.c  tabpanel.h  tabpaneltest.xc  testbed.xc
src/widgets/: animatedgif.c  animatedgif.h  bbx_GIFanimationwidget.c  bbx_GIFanimationwidget.h  bbx_console.c  bbx_console.h  boxpanel.c  boxpanel.h  colorpicker.c  colorpicker.h  console.h  console.xc  datepicker.c  fontpicker.h  fontpicker.xc  loadttffont.h  loadttffont.xc  rbtree.c  rollup.c  rollup.h  tabpanel.c
src/windows/: BBX_Canvas.c  BBX_Canvas.h  BBX_CheckBox.c  BBX_Clipboard.c  BBX_Clipboard.h  BBX_DialogPanel.c  BBX_EditBox.c  BBX_FilePicker.c  BBX_Font.c  BBX_Label.c  BBX_Label.h  BBX_LineEdit.c  BBX_Menubar.c  BBX_MessageBox.h  BBX_Panel.c  BBX_Panel.h  BBX_Popup.h  BBX_Popup2.c  BBX_PopupPanel.c  BBX_PopupPanel.h  BBX_RadioBox.c  BBX_RadioBox.h  BBX_ScrollPanel.h  BBX_Scrollbar.c  BBX_Scrollbar.h  BBX_Spinner.c  BBX_Spinner.h  BabyX.c  BabyX.h  audio.c  bbx.c  bbx_graphicscontext.c  bbx_graphicssupport.h  font.h  minimp3.c  testbed.c
vs/BabyX/: BabyX.sln  BabyX.vcxproj  BabyX.vcxproj.filters
vs/BabyX/BabyX/: BabyX.vcxproj  BabyX.vcxproj.filters
(+4 files in other folders)
